[metadata]
name = jcli
version = 0.1.0
summary = Jira CLI interaction tool
description-file = docs/index.rst
license = MIT License
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords = jira
author = Aaron Conole
author-email = aconole@redhat.com
home-page = https://github.com/apconole/jiracli/
project-url = https://github.com/apconole/jiracli/

[files]
packages =
    jcli

[entry_points]
console_scripts =
    jcli = jcli.shell:cli

[wheel]
universal = 1
